[package]
name    = "gnat"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies.stm32l0xx-hal]
version  = "0.3.1"
features = ["rt", "stm32l082"]

[dev-dependencies]
cortex-m    = "0.6.1"
cortex-m-rt = "0.6.10"
panic-halt  = "0.2.0"
usb-device  = "0.2.3"
usbd-serial = "0.1.0"

[dev-dependencies.stm32-usbd]
git      = "https://github.com/stm32-rs/stm32-usbd.git"
rev      = "67447c6391d93631d9eda6e364d5d465fd6a9222"
features = ["stm32l0x2xx"]


[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"
