[package]
name    = "gnat"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies.stm32l0xx-hal]
version  = "0.5"
features = ["rt", "stm32l082", "stm32-usbd"]


[dev-dependencies]
cortex-m    = "0.6.1"
cortex-m-rt = "0.6.10"
nb          = "0.1.2"
panic-halt  = "0.2.0"
stm32-usbd  = "0.5.0"
usb-device  = "0.2.3"
usbd-serial = "0.1.0"


[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"
